--- a/version.rc.in
+++ b/version.rc.in
@@ -10,11 +10,12 @@
 #define VER_DEBUG                   VS_FF_DEBUG
 #endif
 
+#include <Winver.h>
+
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION     VER_FILEVERSION
 PRODUCTVERSION  VER_PRODUCTVERSION
 FILEFLAGSMASK   VS_FFI_FILEFLAGSMASK
-FILEFLAGS       (VER_PRIVATEBUILD|VER_PRERELEASE)
 FILEOS          VOS__WINDOWS32
 FILETYPE        VFT_DLL
 FILESUBTYPE     VFT2_UNKNOWN
