--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.3.0)
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(PROJECT_NAME MyPlugin)
@@ -9,7 +9,7 @@ project(${PROJECT_NAME} VERSION 1.0.0)
 add_library(${PROJECT_NAME} SHARED myplugin.cpp)
 
 set(WIN32 ON)
-set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
+set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".bgd")
 
 target_link_libraries(
     ${PROJECT_NAME}
