integrated .gmd utilities

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,13 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(PROJECT_NAME BetterGD)
 
-set(GD_H_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/gd.h)
-set(COCOS2D_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/Cocos2d)
-set(MINHOOK_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/MinHook)
-# set(GD_H_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/gd.h)
-# set(COCOS2D_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/Cocos2d)
-# set(MINHOOK_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/MinHook)
+# set(GD_H_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/gd.h)
+# set(COCOS2D_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/Cocos2d)
+# set(MINHOOK_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/MinHook)
+set(GD_H_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/gd.h)
+set(COCOS2D_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/Cocos2d)
+set(MINHOOK_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/MinHook)
+set(ZIPPER_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/Zipper)
 
 set(BGD_PRODUCT_NUMBER 1)
 set(BGD_PRODUCT_VERSION 0)
@@ -42,6 +43,7 @@ include_directories(
     "${GD_H_LOCATION}/include"
     "${GD_H_LOCATION}"
     "${MINHOOK_LOCATION}/include"
+    "${ZIPPER_LOCATION}/zipper"
     "${CMAKE_SOURCE_DIR}/include"
     "${CMAKE_SOURCE_DIR}/include/bgd"
     "${CMAKE_SOURCE_DIR}/include/nodes/general"
@@ -53,6 +55,7 @@ target_link_libraries(
     "${COCOS2D_LOCATION}/cocos2dx/libcocos2d.lib"
     "${COCOS2D_LOCATION}/extensions/libExtensions.lib"
     "${MINHOOK_LOCATION}/build/Release/minhook.x32.lib"
+    "${ZIPPER_LOCATION}/build/Release/staticZipper.lib"
 )
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
