--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,19 +4,22 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(PROJECT_NAME BetterGD)
 
-# set(GD_H_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/gd.h)
-# set(COCOS2D_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/Cocos2d)
-# set(MINHOOK_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/MinHook)
-set(GD_H_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/gd.h)
-set(COCOS2D_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/Cocos2d)
-set(MINHOOK_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/MinHook)
-set(ZIPPER_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/Zipper)
+set(GD_H_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/gd.h)
+set(COCOS2D_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/Cocos2d)
+set(MINHOOK_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/MinHook)
+set(ZIPPER_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/Zipper)
+# set(GD_H_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/gd.h)
+# set(COCOS2D_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/Cocos2d)
+# set(MINHOOK_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/MinHook)
+# set(ZIPPER_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/Zipper)
 
 set(BGD_PRODUCT_NUMBER 1)
 set(BGD_PRODUCT_VERSION 0)
 set(BGD_BUILD_NUMBER 0)
 
 project(${PROJECT_NAME} VERSION 1.0.0)
+
+find_package(ZLIB REQUIRED)
 
 file(GLOB_RECURSE SOURCES 
     src/*.cpp
@@ -48,6 +51,7 @@ include_directories(
     "${CMAKE_SOURCE_DIR}/include/bgd"
     "${CMAKE_SOURCE_DIR}/include/tools/nodes"
     "${CMAKE_SOURCE_DIR}/include/tools/managers"
+    ${ZLIB_DEPS}
 )
 
 target_link_libraries(
@@ -56,6 +60,7 @@ target_link_libraries(
     "${COCOS2D_LOCATION}/extensions/libExtensions.lib"
     "${MINHOOK_LOCATION}/build/Release/minhook.x32.lib"
     "${ZIPPER_LOCATION}/build/Release/staticZipper.lib"
+    ZLIB
 )
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
