shitty attempt to fix my submodule issues

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,18 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(PROJECT_NAME BetterGD)
 
-# set(GD_H_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/gd.h)
-# set(COCOS2D_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/Cocos2d)
-# set(MINHOOK_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/MinHook)
-# set(ZIPPER_LOCATION C:/Users/HJfod/Documents/github/GDMake/bin/Debug/net5.0/win10-x64/submodules/Zipper)
-set(GD_H_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/gd.h)
-set(COCOS2D_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/Cocos2d)
-set(MINHOOK_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/MinHook)
-set(ZIPPER_LOCATION K:/gdmake/bin/Debug/net5.0/win10-x64/submodules/Zipper)
+if (NOT DEFINED ENV{GD_H_LOCATION})
+  message( SEND_ERROR "Missing GD_H_LOCATION! Add it as a submodule or add the path to it to an environment variable" )
+endif()
+if (NOT DEFINED ENV{COCOS2D_LOCATION})
+  message( SEND_ERROR "Missing COCOS2D_LOCATION! Add it as a submodule or add the path to it to an environment variable" )
+endif()
+if (NOT DEFINED ENV{MINHOOK_LOCATION})
+  message( SEND_ERROR "Missing MINHOOK_LOCATION! Add it as a submodule or add the path to it to an environment variable" )
+endif()
+if (NOT DEFINED ENV{ZIPPER_LOCATION})
+  message( SEND_ERROR "Missing ZIPPER_LOCATION! Add it as a submodule or add the path to it to an environment variable" )
+endif()
 
 set(BGD_PRODUCT_NUMBER 1)
 set(BGD_PRODUCT_VERSION 0)
