--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,18 +4,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(PROJECT_NAME BetterGD)
 
-if (NOT DEFINED ENV{GD_H_LOCATION})
-  message( SEND_ERROR "Missing GD_H_LOCATION! Add it as a submodule or add the path to it to an environment variable" )
-endif()
-if (NOT DEFINED ENV{COCOS2D_LOCATION})
-  message( SEND_ERROR "Missing COCOS2D_LOCATION! Add it as a submodule or add the path to it to an environment variable" )
-endif()
-if (NOT DEFINED ENV{MINHOOK_LOCATION})
-  message( SEND_ERROR "Missing MINHOOK_LOCATION! Add it as a submodule or add the path to it to an environment variable" )
-endif()
-if (NOT DEFINED ENV{ZIPPER_LOCATION})
-  message( SEND_ERROR "Missing ZIPPER_LOCATION! Add it as a submodule or add the path to it to an environment variable" )
-endif()
+set(COCOS2D_LOCATION submodules/Cocos2d)
+set(GD_H_LOCATION submodules/gd.h)
+set(MINHOOK_LOCATION submodules/MinHook)
+set(ZIPPER_LOCATION submodules/Zipper)
 
 set(BGD_PRODUCT_NUMBER 1)
 set(BGD_PRODUCT_VERSION 0)
