--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,10 @@ set(COCOS2D_LOCATION        ${CMAKE_SOURCE_DIR}/submodules/Cocos2d)
 set(GD_H_LOCATION           ${CMAKE_SOURCE_DIR}/submodules/gd.h)
 set(MINHOOK_LOCATION        ${CMAKE_SOURCE_DIR}/submodules/MinHook)
 set(ZIPPER_LOCATION         ${CMAKE_SOURCE_DIR}/submodules/Zipper)
+set(LILAC_LOCATION          ${CMAKE_SOURCE_DIR}/submodules/lilac)
 set(MINHOOK_BUILD_LOCATION  ${CMAKE_BINARY_DIR}/submodules/MinHook)
 set(ZIPPER_BUILD_LOCATION   ${CMAKE_BINARY_DIR}/submodules/Zipper)
+set(LILAC_BUILD_LOCATION    ${CMAKE_BINARY_DIR}/submodules/lilac)
 
 set(BGD_PRODUCT_NUMBER 1)
 set(BGD_PRODUCT_VERSION 0)
@@ -43,8 +45,11 @@ set(WIN32 ON)
 add_library(${PROJECT_NAME} SHARED ${SOURCES} ${CMAKE_CURRENT_BINARY_DIR}/version.rc)
 
 if (${BUILD_SUBS})
-  add_subdirectory(${MINHOOK_LOCATION})
-  target_link_libraries(${PROJECT_NAME} ${MINHOOK_BUILD_LOCATION}/${CONFIG_DIR}/minhook.x32.lib)
+  # add_subdirectory(${MINHOOK_LOCATION})
+  # target_link_libraries(${PROJECT_NAME} ${MINHOOK_BUILD_LOCATION}/${CONFIG_DIR}/minhook.x32.lib)
+
+  add_subdirectory(${LILAC_LOCATION})
+  target_link_libraries(${PROJECT_NAME} ${LILAC_BUILD_LOCATION}/src/${CONFIG_DIR}/lilac_hook.lib)
 
   set(BUILD_TEST Off CACHE BOOL "Build the test program." FORCE)
   add_subdirectory(${ZIPPER_LOCATION})
@@ -68,6 +73,7 @@ include_directories(
     "${CMAKE_SOURCE_DIR}/include/bgd"
     "${CMAKE_SOURCE_DIR}/include/tools/nodes"
     "${CMAKE_SOURCE_DIR}/include/tools/managers"
+    "${CMAKE_SOURCE_DIR}/submodules/lilac/include"
     ${ZLIB_DEPS}
 )
 
