icon font + ArgParser

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -1,6 +1,8 @@
 #pragma once
 
+#define BGD_PROJECT_NAME "BetterGD"
 #define BGD_VERSION  "@PROJECT_VERSION@"
 #define BGD_VERSION_MAJOR "@PROJECT_VERSION_MAJOR@"
 #define BGD_VERSION_MINOR "@PROJECT_VERSION_MINOR@"
 #define BGD_VERSION_PATCH "@PROJECT_VERSION_PATCH@"
+#define BGD_VERSION_SUFFIX "@BGD_VERSION_SUFFIX@"
