--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,9 @@ set(LILAC_BUILD_LOCATION    ${CMAKE_BINARY_DIR}/submodules/lilac)
 set(BGD_PRODUCT_NUMBER 1)
 set(BGD_PRODUCT_VERSION 0)
 set(BGD_BUILD_NUMBER 0)
+set(BGD_VERSION_SUFFIX "Pre-Alpha")
 
-project(${PROJECT_NAME} VERSION 1.0.0)
+project(${PROJECT_NAME} VERSION 0.1.0)
 
 find_package(ZLIB REQUIRED)
 
