--- a/version.rc.in
+++ b/version.rc.in
@@ -1,5 +1,5 @@
-#define VER_FILEVERSION             @BGD_PRODUCT_NUMBER@,@BGD_PRODUCT_VERSION@,@BGD_BUILD_NUMBER@,0
-#define VER_FILEVERSION_STR         "@BGD_PRODUCT_NUMBER@.@BGD_PRODUCT_VERSION@.@BGD_BUILD_NUMBER@.0\0"
+#define VER_FILEVERSION             @PROJECT_VERSION_MAJOR@,@PROJECT_VERSION_MINOR@,@PROJECT_VERSION_PATCH@,0
+#define VER_FILEVERSION_STR         "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJECT_VERSION_PATCH@.0\0"
 
 #define VER_PRODUCTVERSION          @BGD_PRODUCT_NUMBER@,@BGD_PRODUCT_VERSION@,@BGD_BUILD_NUMBER@,0
 #define VER_PRODUCTVERSION_STR      "@BGD_PRODUCT_NUMBER@.@BGD_PRODUCT_VERSION@.@BGD_BUILD_NUMBER@\0"
